Criar C.R.U.D com Retrofit2 e BaseAdapter