@@ -1,21 +1,24 @@
 package mobile.senaigo.com.meuretrofit2.activity;
 
 import android.app.AlertDialog;
-import android.support.v7.app.AppCompatActivity;
 import android.os.Bundle;
+import android.support.v7.app.AppCompatActivity;
+import android.util.Log;
 import android.view.View;
 import android.widget.AdapterView;
 import android.widget.EditText;
 import android.widget.ListView;
-import android.widget.SimpleAdapter;
 import android.widget.Toast;
 
-import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 
 import mobile.senaigo.com.meuretrofit2.R;
+import mobile.senaigo.com.meuretrofit2.adapter.UserAdapter;
 import mobile.senaigo.com.meuretrofit2.bootstrap.APIClient;
+import mobile.senaigo.com.meuretrofit2.model.Address;
+import mobile.senaigo.com.meuretrofit2.model.Company;
+import mobile.senaigo.com.meuretrofit2.model.Geo;
 import mobile.senaigo.com.meuretrofit2.model.User;
 import mobile.senaigo.com.meuretrofit2.resource.UserResource;
 import retrofit2.Call;
@@ -26,15 +29,15 @@ public class TelaPrincipal extends AppCompatActivity {
     UserResource apiUserResouce;
 
     private Integer posicao;
-    HashMap<String, String> mapa;
+    User mapa;
 
     EditText txtUserId;
     EditText txtTitle;
     EditText txtBody;
     ListView listViewUser;
     List<User> listUser;
-    List<HashMap<String, String>> colecao =
-            new ArrayList<HashMap<String, String>>();
+//    List<HashMap<String, String>> colecao =
+//            new ArrayList<HashMap<String, String>>();
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
@@ -44,6 +47,7 @@ public class TelaPrincipal extends AppCompatActivity {
         txtUserId = findViewById(R.id.txtUserId);
         txtTitle = findViewById(R.id.txtTitle);
         txtBody = findViewById(R.id.txtBody);
+        listViewUser = findViewById(R.id.listViewUser);
 
         //tem o contexto da aplicação (application)
         //PASSO 4
@@ -55,24 +59,23 @@ public class TelaPrincipal extends AppCompatActivity {
 
             @Override
             public void onResponse(Call<List<User>> call, Response<List<User>> response) {
-                listViewUser = findViewById(R.id.listViewUser);
-
                 listUser = response.body();
-
-                for (User u : listUser) {
-                    colecao.add(converterMap(u));
-                }
-
                 confAdapter();
                 listViewUser.setOnItemClickListener(new AdapterView.OnItemClickListener() {
                     @Override
                     public void onItemClick(AdapterView<?> adapterView, View view, int i, long l) {
-                        mapa = colecao.get(i);
-                        setPosicao(new Integer(i));
-                        txtUserId.setText(mapa.get("userId"));
-                        txtBody.setText(mapa.get("body"));
-                        txtTitle.setText(mapa.get("title"));
-
+                        try {
+                            mapa = listUser.get(i);
+                            setPosicao(new Integer(i));
+                            txtUserId.setText(mapa.getId());
+                            txtBody.setText(mapa.getName());
+                            txtTitle.setText(mapa.getUsername());
+                        } catch (Exception e) {
+                            AlertDialog alertDialog = new AlertDialog.Builder(getApplicationContext()).create();
+                            alertDialog.setTitle("ERRO!");
+                            alertDialog.setMessage(e.getMessage());
+                            alertDialog.show();
+                        }
                     }
                 });
             }
@@ -103,16 +106,37 @@ public class TelaPrincipal extends AppCompatActivity {
                 throw new Exception("Não pode ser vazio");
             }
 
-            User user = new User(new Integer(userId), null, title, body);
+//            User user = new User(new Integer(userId), null, title, body);
+
+            User user = new User();
+            user.setAddress(new Address());
+            user.setCompany(new Company());
+            user.getAddress().setGeo(new Geo());
+            user.setId(Integer.valueOf(userId));
+
+            user.setName(title);
+            user.setUsername(body);
+            user.setEmail("email@email.com");
+            user.setPhone("xx-xxxxx-xxxx");
+            user.setWebsite("www.site.com");
+            user.getAddress().setStreet("Endereço");
+            user.getAddress().setSuite("Complemento");
+            user.getAddress().setCity("Cidade");
+            user.getAddress().setZipcode("Cep");
+            user.getAddress().getGeo().setLat(000000000.1);
+            user.getAddress().getGeo().setLng(000000000.1);
+            user.getCompany().setName("Industria C.O");
+            user.getCompany().setCatchPhrase("CP");
+            user.getCompany().setBs("Bs");
 
             Call<User> post = apiUserResouce.post(user);
             post.enqueue(new Callback<User>() {
                 @Override
                 public void onResponse(Call<User> call, Response<User> response) {
                     User u = response.body();
-                   colecao.add(converterMap(u));
-                   confAdapter();
-                 //limparCampos();
+                    listUser.add(u);
+                    confAdapter();
+                    //limparCampos();
 
                 }
 
@@ -195,26 +219,18 @@ public class TelaPrincipal extends AppCompatActivity {
 
     public HashMap<String, String> converterMap(User user) {
         HashMap<String, String> map = new HashMap<>();
-        map.put("userId", user.getUserId() + "");
+        map.put("userId", user.getId() + "");
         map.put("id", user.getId() + "");
-        map.put("title", user.getTitle());
-        map.put("body", user.getBody());
+        map.put("title", user.getName());
+        map.put("body", user.getUsername());
         return map;
     }
 
     public void confAdapter() {
-        String[] from = {"id", "title"};
-        int[] to = {R.id.txtUserId2, R.id.txtTitle2};
-
-        SimpleAdapter simpleAdapter =
-                new SimpleAdapter(
-                        getApplicationContext(),
-                        colecao,
-                        R.layout.user,
-                        from,
-                        to);
-
-        listViewUser.setAdapter(simpleAdapter);
+        Log.i("teste2", listUser.size() + "");
+        UserAdapter userAdapter = new UserAdapter(this, listUser);
+        Log.i("teste2", userAdapter.getCount() + "");
+        listViewUser.setAdapter(userAdapter);
     }
 
     public Integer getPosicao() {
@@ -292,18 +308,37 @@ public class TelaPrincipal extends AppCompatActivity {
                 throw new Exception("Não pode ser vazio");
             }
 
-            if (getPosicao() == null || getPosicao() < 0 ) {
+            if (getPosicao() == null || getPosicao() < 0) {
                 throw new Exception("Nenhum usuário foi selecionado!");
             }
 
-            User user = new User(new Integer(userId), new Integer(mapa.get("id")), title, body);
+            User user = new User();
+            user.setAddress(new Address());
+            user.setCompany(new Company());
+            user.getAddress().setGeo(new Geo());
+            user.setId(Integer.valueOf(userId));
+
+            user.setName(title);
+            user.setUsername(body);
+            user.setEmail("email@email.com");
+            user.setPhone("xx-xxxxx-xxxx");
+            user.setWebsite("www.site.com");
+            user.getAddress().setStreet("Endereço");
+            user.getAddress().setSuite("Complemento");
+            user.getAddress().setCity("Cidade");
+            user.getAddress().setZipcode("Cep");
+            user.getAddress().getGeo().setLat(000000000.1);
+            user.getAddress().getGeo().setLng(000000000.1);
+            user.getCompany().setName("Industria C.O");
+            user.getCompany().setCatchPhrase("CP");
+            user.getCompany().setBs("Bs");
 
             Call<User> put = apiUserResouce.put(user, user.getId());
             put.enqueue(new Callback<User>() {
                 @Override
                 public void onResponse(Call<User> call, Response<User> response) {
                     User u = response.body();
-                    colecao.set(getPosicao(), converterMap(u));
+                    listUser.set(getPosicao(), u);
                     confAdapter();
                     //limparCampos();
 
